--- a/index.html
+++ b/index.html
@@ -4,35 +4,55 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Web Studio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-accent">Studio</span></a
+        >
         <ul>
-          <li><a href="">Studio</a></li>
+          <li><a class="header-link" href="./index.html">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li>
+            <a class="address-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-button" type="button">Order Service</button>
       </section>
-      <section>
+      <section class="about">
         <h2>About</h2>
         <ul>
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="about-subtitle">Strategy</h3>
+            <p class="about-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
@@ -60,17 +80,17 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
         <ul>
-          <li>
+          <li class="member">
             <img
               width="264"
               src="./images/MarkGuerrero.jpg"
               alt="Team member - Mark Guerrero"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="member-title">Mark Guerrero</h3>
+            <p class="member-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -101,10 +121,67 @@
           </li>
         </ul>
       </section>
+      <section class="portfolio">
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img width="360" src="./images/bankingApp.jpg" alt="Banking App" />
+            <h3 class="works-title">Banking App</h3>
+            <p class="works-text">App</p>
+          </li>
+          <li>
+            <img
+              width="360"
+              src="./images/cashlessPayment.jpg"
+              alt="Cashless Payment"
+            />
+            <h3 class="works-title">Cashless Payment</h3>
+            <p class="works-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              width="360"
+              src="./images/meditationApp.jpg"
+              alt="Meditation App"
+            />
+            <h3 class="works-title">Meditation App</h3>
+            <p class="works-text">App</p>
+          </li>
+          <li>
+            <img
+              width="360"
+              src="./images/taxiService.jpg"
+              alt="Taxi Service"
+            />
+            <h3 class="works-title">Taxi Service</h3>
+            <p class="works-text">Marketing</p>
+          </li>
+          <li>
+            <img
+              width="360"
+              src="./images/screenIllustrations.jpg"
+              alt="Screen Illustrations"
+            />
+            <h3 class="works-title">Screen Illustrations</h3>
+            <p class="works-text">Design</p>
+          </li>
+          <li>
+            <img
+              width="360"
+              src="./images/onlineCourses.jpg"
+              alt="Online Courses"
+            />
+            <h3 class="works-title">Online Courses</h3>
+            <p class="works-text">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo" href="./index.html"
+        >Web<span class="logo-accent_light">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
