--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         >
         <ul>
           <li><a class="header-link" href="./index.html">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <li><a class="header-link" href="">Portfolio</a></li>
+          <li><a class="header-link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
@@ -58,22 +58,22 @@
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="about-subtitle">Punctuality</h3>
+            <p class="about-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="about-subtitle">Diligence</h3>
+            <p class="about-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="about-subtitle">Technologies</h3>
+            <p class="about-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -98,8 +98,8 @@
               src="./images/TomFord.jpg"
               alt="Team member - Tom Ford"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="member-title">Tom Ford</h3>
+            <p class="member-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -107,8 +107,8 @@
               src="./images/CamilaGarcia.jpg"
               alt="Team member - Camila Garcia"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="member-title">Camila Garcia</h3>
+            <p class="member-text">Marketing</p>
           </li>
           <li>
             <img
@@ -116,8 +116,8 @@
               src="./images/DanielWilson.jpg"
               alt="Team member - Daniel Wilson"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="member-title">Daniel Wilson</h3>
+            <p class="member-text">UI Designer</p>
           </li>
         </ul>
       </section>
