--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <h3 class="member-title">Mark Guerrero</h3>
             <p class="member-text">Product Designer</p>
           </li>
-          <li>
+          <li class="member">
             <img
               width="264"
               src="./images/TomFord.jpg"
@@ -101,7 +101,7 @@
             <h3 class="member-title">Tom Ford</h3>
             <p class="member-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="member">
             <img
               width="264"
               src="./images/CamilaGarcia.jpg"
@@ -110,7 +110,7 @@
             <h3 class="member-title">Camila Garcia</h3>
             <p class="member-text">Marketing</p>
           </li>
-          <li>
+          <li class="member">
             <img
               width="264"
               src="./images/DanielWilson.jpg"
