Fixed titles and list type

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <button class="hero-button" type="button">Order Service</button>
       </section>
       <section class="about">
-        <h2>About</h2>
+        <h2 class="title">About</h2>
         <ul>
           <li>
             <h3 class="about-subtitle">Strategy</h3>
@@ -85,7 +85,7 @@
         </ul>
       </section>
       <section class="team">
-        <h2 class="team-title">Our Team</h2>
+        <h2 class="title">Our Team</h2>
         <ul>
           <li class="member">
             <img
@@ -126,7 +126,7 @@
         </ul>
       </section>
       <section class="portfolio">
-        <h2>Our Portfolio</h2>
+        <h2 class="title">Our Portfolio</h2>
         <ul>
           <li>
             <img width="360" src="./images/bankingApp.jpg" alt="Banking App" />
